--- a/_config.yml
+++ b/_config.yml
@@ -54,20 +54,19 @@ navigation_footer:
 # Collections
 collections:
   home:
-    layout: page
+    # layout: page
     feature_text: |
       ## Human & Machine Learning Lab
       A research lab at New York University
     feature_image: "https://picsum.photos/2560/600?image=872"
   pages:
-    layout: page
+    # layout: page
     # feature_text: |
     #   ## Human & Machine Learning Lab
     #   A research lab at New York University
     # feature_image: "https://picsum.photos/2560/600?image=872"
   posts:
     title: Posts
-    layout: blog
     output: true
     description: "Read about the latest research from HMLL"
     feature_text: |
