--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ navigation_header:
   url: /publications/
 - title: Blog
   url: /blog/
-- title: Apply
+- title: Join us
   url: /apply/
 
 # Footer nav
